// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the correct snapshot for no expenses 1`] = `
<div>
  <div>
    <h3>
      No expenses found!
    </h3>
  </div>
</div>
`;

exports[`should render the correct snapshot for one expense 1`] = `
<div>
  <div>
    <h3>
      You are viewing 
      1
       
      expense
       totaling 
      $94.34
    </h3>
  </div>
</div>
`;

exports[`should render the correct snapshot for two expenses 1`] = `
<div>
  <div>
    <h3>
      You are viewing 
      2
       
      expenses
       totaling 
      $94.34
    </h3>
  </div>
</div>
`;
